--- a/vue/pygmalion/public/index.html
+++ b/vue/pygmalion/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="2D 캐릭터 컨셉 아트 일러스트 기반 3D 아바타 자동 생성">
+    <meta name="title" content="Pygmalion">
     <script src="https://kit.fontawesome.com/b5e18e3b8f.js" crossorigin="anonymous"></script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Pygmalion</title>
